# sbom-age-test

./: .gitignore  Cargo.toml  README.md  compose.yaml  perf.sql  test.sql
src/: db.rs  main.rs  rel.rs
