[package]
name = "age-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
apache_age = "0.6.0"
bzip2 = { version = "0.4", features = [] }
log = "0.4.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spdx-expression = "0.5.2"
spdx-rs = "0.5"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1", "with-time-0_3", "with-uuid-1"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }
walkdir = "2"
